# rust-bip85

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  dart-integration-test.yml  precompiled_binaries.yml  rust-coverage.yml
bindings/dart-bip85/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
bindings/dart-bip85/android/: build.gradle  settings.gradle
bindings/dart-bip85/android/src/main/: AndroidManifest.xml
bindings/dart-bip85/example/: README.md  analysis_options.yaml  pubspec.yaml
bindings/dart-bip85/example/android/app/: build.gradle
bindings/dart-bip85/example/integration_test/: bip85_test.dart  simple_test.dart
bindings/dart-bip85/example/ios/Runner.xcodeproj/: project.pbxproj
bindings/dart-bip85/example/lib/: main.dart
bindings/dart-bip85/example/linux/: CMakeLists.txt  my_application.cc
bindings/dart-bip85/example/windows/: CMakeLists.txt
bindings/dart-bip85/ios/: bip85.podspec
bindings/dart-bip85/lib/: bip85.dart
bindings/dart-bip85/linux/: CMakeLists.txt
bindings/dart-bip85/macos/: bip85.podspec
bindings/dart-bip85/rust/: Cargo.toml  cargokit.yaml
bindings/dart-bip85/rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
bindings/dart-bip85/windows/: CMakeLists.txt
examples/: drng.rs  mnemonic.rs  simple.rs
src/: drng.rs  error.rs  hex.rs  lib.rs  mnemonic.rs  pwd_base64.rs  pwd_base85.rs  wif.rs  xprv.rs
tests/: bip85_tests.rs  drng_test.rs  pwd_base64_test.rs  pwd_base85_test.rs
(+18 files in other folders)
