[package]
name = "bip85_extended"
version = "1.1.0"
authors = [
    "Rita Kitic <rikitau@protonmail.com>",
    "Jules Azad EMERY <ethicnology@pm.me>",
]
description = "BIP-85 - deterministic entropy from bip32 keychains"
repository = "https://github.com/ethicnology/rust-bip85"
readme = "README.md"
license = "MIT"
edition = "2021"
keywords = ["bitcoin", "bip", "bip85"]

[features]
default = ["mnemonic"]
mnemonic = ["bip39"]
# Note: English is the standard for bip39 so always included
chinese-simplified = ["mnemonic", "bip39/chinese-simplified"]
chinese-traditional = ["mnemonic", "bip39/chinese-traditional"]
czech = ["mnemonic", "bip39/czech"]
french = ["mnemonic", "bip39/french"]
italian = ["mnemonic", "bip39/italian"]
japanese = ["mnemonic", "bip39/japanese"]
korean = ["mnemonic", "bip39/korean"]
spanish = ["mnemonic", "bip39/spanish"]
portuguese = ["mnemonic", "bip39/portuguese"]

all-languages = [
    "mnemonic",
    "chinese-simplified",
    "chinese-traditional",
    "czech",
    "french",
    "italian",
    "japanese",
    "korean",
    "spanish",
    "portuguese",
]

[dependencies]
bitcoin = "0.32.4"
bip39 = { version = "2.2.0", optional = true }
sha3 = "0.10.8"
base64 = "0.22.1"
base85 = "2.0.0"

[[example]]
name = "mnemonic"
required-features = ["japanese"]
